--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
                 <configuration>
-                    <mainClass>cz.muni.fi.xkurcik.masterthesis.Main</mainClass>
+                    <mainClass>cz.muni.fi.xkurcik.masterthesis.cli.CliMain</mainClass>
                 </configuration>
             </plugin>
         </plugins>
@@ -40,10 +40,24 @@
             <artifactId>log4j-api</artifactId>
             <version>2.11.1</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>2.11.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.1-jre</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 </project>
