Configuration example for trackers

--- a/config.example.json
+++ b/config.example.json
@@ -15,5 +15,11 @@
       "name": "JPEG",
       "params": "50"
     }
+  ],
+  "trackers": [
+    {
+      "name": "KTH-SE (1)",
+      "executableFile": "run.bat"
+    }
   ]
 }
